<resources>
    <string name="app_name">Hello Firebase</string>

    <string name="main_tabs_recent">Recent</string>
    <string name="main_tabs_my_posts">My Posts</string>
    <string name="main_tabs_my_top_posts">My Top Posts</string>

    <string name="main_menu_sign_out">Sign Out</string>

    <string name="sign_in_label_firebase">Hello, Firebase</string>
    <string name="sign_in_sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_sign_up_email">Sign up with email</string>
    <string name="sign_in_sign_in_email">or Sign in with email.</string>
    <string name="sign_in_email_sign_up">Sign Up</string>
    <string name="sign_in_email_sign_in">Sign In</string>

    <string name="sign_in_progress_sign_up">Sign Up…</string>
    <string name="sign_in_progress_sign_in">Sign In…</string>

    <string name="email_sign_in_hint_email">Email</string>
    <string name="email_sign_in_hint_password">Password</string>

    <string name="new_post_label_title">Title</string>
    <string name="new_post_hint_title">Write title</string>
    <string name="new_post_label_body">Post</string>
    <string name="new_post_hint_body">Write your post…</string>

    <string name="post_detail_comment_hint">Write a comment…</string>

</resources>
