<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.droibit.hello.firebase.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_below="@id/toolbar"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@android:color/white"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabMode="fixed"
            app:tabGravity="fill">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tabs_recent" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_my_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tabs_my_posts" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_my_top_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tabs_my_top_posts" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_fab_edit"
            app:fabSize="normal" />

    </RelativeLayout>

</layout>
